* Fix regressions responsible for lower case titles in result list (ID: 3147594)
* Implement the HTTP 404 error in kiwix-serve
* Fix a small bug in the indexing code to avoid forgetting around 100 articles per ZIM file
* Disable DNS prefetching for external links
* New locales: Polish, Dutch
* Open a ZIM file directly from the command line
* Gnome integration: mime-type recognition + icon & application associations (ZIM double-click feature)

Kiwix 0.9 alpha7
* Fix the encoding issue in the help in Parsi (ID: 3060250)
* Fix an URL parsing issue impacting title containing a '/' (ID: 3065286)
* Add mouse thumb buttons back/forward support (ID: 3063304)
* Add a contextual menu "Save image as..." for images (ID: 1669553)
* Remove the deprecated (not used anymore by libzim) bzip2 dependence
* Fully localized MS Windows installer
* Fix the default filename by "save image" and "save as PDF"  with article containing a "/"
* Avoid a small bug responsible for duplicate zim calls
* Per default, Kiwix instance are not "live" anymoore. Can now be decided with buildDistribution.pl
* Propose a download dialog if the mime-type is unknown
* New locales: Catalan
* Fix a bug with the "impossible" indexing process in case of defect library.xml (ID: 3068722)
* Reintroduction of the skin switcher tool
* Consider chrome:// as internal url, and do not ask anumore to load the url with an external app.
* Fullscreen is now a *real* fullscreen
* Fix the initialisation of the random article url generator (ID: 3109548)
* Fix an issue by tab rendering after closing one (ID: 3108586)
* Fix the issue with no tab title if user change tab before content renders (ID: 3108598)
* Fix the brocken liblzma dependence in Debian package for Maverick (ID: 3115241)
* On the Windows installer, add dialog boxes to elevate the user level to get admin permissions

Kiwix 0.9 alpha6
* Fix a regression bug impacting the case insensitive (first character only) suggestion system